# shams_ai_assistant

./: MANIFEST.in  README.md  pyproject.toml
shams_ai_assistant/: hooks.py  install.py  mcp.py  modules.txt  patches.txt  permissions.py  usage.py
shams_ai_assistant/api/: chat.py  dashboard.py  diagnostics.py  mcp.py
shams_ai_assistant/patches/v3_3_0/: seed_ai_tools.py
shams_ai_assistant/providers/: anthropic.py  base.py  factory.py  gemini.py  mistral.py  ollama.py  openai_compatible.py  opencode.py
shams_ai_assistant/public/css/: assistant.css
shams_ai_assistant/public/js/: assistant.js
shams_ai_assistant/setup/: standard_providers.py  standard_tools.py
shams_ai_assistant/shams_ai_assistant/doctype/ai_assistant_settings/: ai_assistant_settings.json  ai_assistant_settings.py
shams_ai_assistant/shams_ai_assistant/doctype/ai_conversation/: ai_conversation.json  ai_conversation.py
shams_ai_assistant/shams_ai_assistant/doctype/ai_mcp_server/: ai_mcp_server.json  ai_mcp_server.py
shams_ai_assistant/shams_ai_assistant/doctype/ai_message/: ai_message.json  ai_message.py
shams_ai_assistant/shams_ai_assistant/doctype/ai_provider/: ai_provider.js  ai_provider.json  ai_provider.py
shams_ai_assistant/shams_ai_assistant/doctype/ai_token_usage/: ai_token_usage.json  ai_token_usage.py
shams_ai_assistant/shams_ai_assistant/doctype/ai_tool/: ai_tool.json  ai_tool.py
shams_ai_assistant/shams_ai_assistant/doctype/ai_tool_role/: ai_tool_role.json  (+1 more)
shams_ai_assistant/tooling/: decorators.py  local_handlers.py  manager.py
shams_ai_assistant/tools/: registry.py
(+11 files in other folders)
