[project]
name = "shams_ai_assistant"
authors = [{name = "Shams Solutions", email = "support@shams.local"}]
description = "Multi-provider AI assistant for Frappe and ERPNext"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
